The sources for this package are in the main Angular Material repo. Please file issues and pull requests against that repo. [Angular CLI](https://github.com/HishamAbonjim/hd-table) version 1.0.3.
The library is available as npm package, so all you need to do is to run the following command:

```
npm install rubber-table
```
This command will create a record in your `package.json` file and install the package into the npm modules folder.

First thing you need to do is to import the rubber-table directives into your component.

```

import {RubberTable} from 'rubber-table';

```

Then register it by adding to the list of directives of your module:

```
// ...

@NgModule({
  imports: [
    // ...

   RubberTable,

    // ...
  ],
  declarations: [ ... ]
})
// ...
```
 <strong> here are the steps: :D </steong>
* Import RubberTable in the desired  component
```
import {RubberTableComponent} from 'rubber-table';
```

* Import AfterViewInit and ViewChild  from  '@angular/core'

```
import {  AfterViewInit ,ViewChild} from '@angular/core';

```

* implement AfterViewInit
```
export class AppComponent implements  AfterViewInit {
```
* define RubberTable in component

```
 @ViewChild(RubberTable , {static: false , read:false}  ) HDTable;
```
* adding table headers

```
gAfterViewInit(){
   this.HDTable.addHeaders( [ //#D headers
        "Final Product",
        "Product Capacity",
        "Product CapacityUnit",
        "Product Code"
      ]);

}
```

* adding table skeleton in ngAfterViewInit()
```
ngAfterViewInit(){
 //  the first pram is the column name (used as json prop key )  by defult tag will be input & type will be text
    this.HDTable.addColumn("FinalProduct"  );
     // specify the column tag and input type
    this.HDTable.addColumn("ProductCode", this.HDTable.tags.input, this.HDTable.inputTypes.text);
    this.HDTable.addColumn("ProductCapacity ",  this.HDTable.tags.input, this.HDTable.inputTyp.number );

     // in select tag we have to pass the lookups values

--- a/projects/rubber-table/src/lib/rubber-table.html
+++ b/projects/rubber-table/src/lib/rubber-table.html
@@ -1,4 +1,4 @@
-<div class="hd-table-div">
+<div class="hd-table-div-container">
   <table class="table table-sm hd-table">
     <thead class="hd-table-header">
       <tr class="hd-table-header-tr">
@@ -6,9 +6,9 @@
         <th> </th>
       </tr>
     </thead>
-    <tbody>
-      <tr class="hd-table-row" *ngFor="let row of rows; let i = index; ">
-        <td  class="hd-table-td"*ngFor="let cell of row">
+    <tbody class="hd-table-tbody">
+      <tr class="hd-table-tbody-row" *ngFor="let row of rows; let i = index; ">
+        <td  class="hd-table-tbody-td"*ngFor="let cell of row">
           <select class="hd-table-select" *ngIf="cell.tag =='select' && !cell.key " required="{{cell.requierd}}" class="form-control"
             disabled="{{cell.disabled}}" [(ngModel)]="cell.value">
             <!-- <option value="-1" selected> Chose </option> -->
